--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-bocy{
+body{
     text-align: center;
     background-color: #f0e8c5;
     font-family: cursive;
@@ -16,4 +16,8 @@ div{
     margin-left: 25px;
     margin-right: 25px;
     background-color: white;
+}
+img{
+    width: 250px;
+    height: 250px;
 }
